<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/answer" />

        <TextView
            android:id="@+id/answerTextView"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="0" />
    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="3">

        <Button
            android:id="@+id/button_7"
            android:text="@string/button_7"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/button_8"
            android:text="@string/button_8"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/button_9"
            android:text="@string/button_9"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/button_4"
            android:text="@string/button_4"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/button_5"
            android:text="@string/button_5"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/button_6"
            android:text="@string/button_6"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/button_1"
            android:text="@string/button_1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/button_2"
            android:text="@string/button_2"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/button_3"
            android:text="@string/button_3"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/button_backspace"
            android:text="@string/button_backspace"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/button_0"
            android:text="@string/button_0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />

        <Button
            android:id="@+id/button_return"
            android:text="@string/button_return"
            app:layout_columnWeight="1"
            app:layout_gravity="fill" />
    </androidx.gridlayout.widget.GridLayout>
</LinearLayout>