<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/math" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:layout_width="140dp"
                android:layout_height="140dp">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="108dp"
                    android:src="@drawable/category_item_expressions" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:text="@string/expressions"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="140dp"
                android:layout_height="140dp">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="108dp"
                    android:src="@drawable/category_item_comparison" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:text="@string/comparison"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="140dp"
                android:layout_height="140dp">

                <ImageView
                    android:layout_width="140dp"
                    android:layout_height="108dp"
                    android:src="@drawable/category_item_progressions" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="8dp"
                    android:gravity="center"
                    android:text="@string/progressions"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </HorizontalScrollView>
</LinearLayout>