<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.test_fragments.positions.PositionsFragment">

    <LinearLayout
        android:id="@+id/timeAndScoreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_left" />

        <TextView
            android:id="@+id/timeLeftTextView"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score" />

        <TextView
            android:id="@+id/scoreTextView"
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/hintTextView"
        android:layout_below="@id/timeAndScoreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:textSize="18sp"
        tools:text="Подсказка о том, что нужно делать в этом тесте" />

    <com.sharipov.brainexercise.util.LockableRecyclerView
        android:id="@+id/recyclerView"
        android:layout_above="@id/buttonsLayout"
        android:layout_below="@id/hintTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/shapes_card_item" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/countDownTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="32sp"
            tools:visibility="visible"
            tools:text="3"/>

        <Button
            android:id="@+id/buttonNo"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no" />

        <Button
            android:id="@+id/buttonYes"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/yes" />
    </LinearLayout>

</RelativeLayout>